Overview of Changes in Maude alpha89c
=====================================
* fixed bug iter theory matching with extension could return a match
  where the matched portion was alien
* added unification with extension
* reimplement meta-unification interface to support control over fresh
  variable names and disjoint unification
* allow spaces in file names using \ and "" conventions

Overview of Changes in Maude alpha89b
=====================================
* fixed bug where early unifcation failure caused memory corruption

Overview of Changes in Maude alpha89a
=====================================
* fixed bug where syntax could leave renaming in bad state
* fixed bug where were were passing variable->BDD mappings by value
rather than by reference
* fixed bug where we weren't clear new substitutions in CUI
unification
* fixed bug where we weren't deleting subproblems in unification
problems

Overview of Changes in Maude alpha89
====================================
* fixed bug where new unsorted unifier would not be look for after an
  unsorted unifier failed to have at least one sorted solution
* fixed bug where non-unifiers were generated in deeply nested
  commutative unification examples
* fixed bug where command line files were ignored with -no-prelude
  flag
* use dag solved forms for unification
* first support for AC unification

Overview of Changes in Maude alpha88f
=====================================
* added commutative unification
* fixed free theory instantiation bug
* fixed sort calculation of S_Theory terms bug
* fixed unification with too many variables bug
* added iter theory unification

Overview of Changes in Maude 2.3 (alpha88e)
===========================================
* string, qid and float constants allowed in unification
* fixed unify f(X, Y) =? f(Y, X)  bug

Overview of Changes in Maude alpha88d
=====================================
* set trace builtin on/off command
* state caching in strategy language