@@ -1,3 +1,11 @@
+2007-07-23  Steven Eker  <eker@goo.csl.sri.com>
+
+	* unificationProblem.cc (findOrderSortedUnifiers): fix bug where
+	we were not telling the BDD package about the BDD variables we
+	allocate to represent the sorts of real variables
+
+===================================Maude89c===========================================
+
 2007-07-09  Steven Eker  <eker@goo.csl.sri.com>
 
 	* unificationProblem.cc (UnificationProblem): fix bug where we
